Update azure-pipelines.yml for Azure Pipelines2

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,8 +5,8 @@ variables:
   webRepository: 'web'
   tag: '$(Build.BuildId)
 
-stages:
-- stage: 'Build'
+#stages:
+#- stage: 'Build'
 #  displayName: 'Build and push'
 #  jobs:  
 #  - job: 'Build'
