--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,8 +32,8 @@ stages:
       displayName: 'Deploy job'
       pool:
         vmImage: 'ubuntu-18.04'
-      variables:
-      - group: Release
+      #variables:
+      #- group: Release
       steps:
       - task: AzureWebAppContainer@1
         inputs:
