--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,16 @@ stages:
         vmImage: 'ubuntu-18.04'
       steps:
       - task: Docker@2
+        displayName: Login to ACR
+        inputs:
+          command: login
+          containerRegistry: testregistrysz002
+      - task: Docker@2
+        displayName: Login to Docker Hub
+        inputs:
+          command: login
+          containerRegistry: 'sergiizhuravskyi/public_sz_repo_001'
+      - task: Docker@2
         displayName: 'Build and push the image to container registry'
         inputs:
           command: buildAndPush
