--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,11 +19,11 @@ stages:
         inputs:
           command: login
           containerRegistry: testregistrysz002
-      - task: Docker@2
-        displayName: Login to Docker Hub
-        inputs:
-          command: login
-          containerRegistry: 'sergiizhuravskyi/public_sz_repo_001'
+      # - task: Docker@2
+      #   displayName: Login to Docker Hub
+      #   inputs:
+      #     command: login
+      #     containerRegistry: 'sergiizhuravskyi/public_sz_repo_001'
       - task: Docker@2
         displayName: 'Build and push the image to container registry'
         inputs:
