Update azure-pipelines.yml for Azure Pipelines0034

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,8 @@ stages:
           repository: $(webRepository)
           dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
           #containerRegistry: 'sergiizhuravskyi/public_sz_repo_001'
-          containerRegistry: 'Container Registry Connection'
+          #containerRegistry: 'Container Registry Connection'
+          containerRegistry: testregistrysz002
           tags: |
             $(tag)
   - stage: 'Deploy'
