--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,11 +14,11 @@ stages:
       pool:
         vmImage: 'ubuntu-18.04'
       steps:
-      - task: Docker@2
-        displayName: Login to ACR
-        inputs:
-          command: login
-          containerRegistry: testregistrysz002
+      # - task: Docker@2
+      #   displayName: Login to ACR
+      #   inputs:
+      #     command: login
+      #     containerRegistry: testregistrysz002
       # - task: Docker@2
       #   displayName: Login to Docker Hub
       #   inputs:
@@ -33,7 +33,7 @@ stages:
           dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
           #containerRegistry: 'sergiizhuravskyi/public_sz_repo_001'
           #containerRegistry: 'Container Registry Connection'
-          containerRegistry: testregistrysz002
+          #containerRegistry: testregistrysz002
           tags: |
             $(tag)
   - stage: 'Deploy'
