Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ stages:
           buildContext: $(Build.Repository.LocalPath)
           repository: $(webRepository)
           dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
-          #containerRegistry: 'sergiizhuravskyi/public_sz_repo_001'
+          containerRegistry: 'DockerSZ'
           #containerRegistry: 'Container Registry Connection'
           #containerRegistry: testregistrysz002
           tags: |
