Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,7 @@ stages:
           containerRegistry: 'DockerSZ'
           #containerRegistry: 'Container Registry Connection'
           #containerRegistry: testregistrysz002
+          #azureSubscriptionEndpoint: $(azureSubscriptionEndpoint)
           tags: |
             $(tag)
   - stage: 'Deploy'
