Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,5 +51,6 @@ stages:
       - task: AzureWebAppContainer@1
         inputs:
           appName: $(WebAppName)
-          azureSubscription: 'Resource Manager - Tailspin - Space Game'
+          #azureSubscription: 'Resource Manager - Tailspin - Space Game'
+          azureSubscription: 'VSPS_testsz001'
           imageName: $(RegistryName)/$(webRepository):$(build.buildId)
